// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination nur-frueh stabil 1`] = `
[
  {
    "Beginn": "2026-04-14 06:00",
    "Ende": "2026-04-14 07:00",
    "Pause": 0,
  },
  {
    "Beginn": "2026-04-14 15:45",
    "Ende": "2026-04-15 07:00",
    "Pause": 30,
  },
  {
    "Beginn": "2026-04-15 15:45",
    "Ende": "2026-04-15 17:00",
    "Pause": 30,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-spaet stabil 1`] = `
[
  {
    "Beginn": "2026-04-14 06:00",
    "Ende": "2026-04-14 07:00",
    "Pause": 0,
  },
  {
    "Beginn": "2026-04-14 22:00",
    "Ende": "2026-04-15 07:00",
    "Pause": 30,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-nacht stabil 1`] = `
[
  {
    "Beginn": "2026-04-14 06:00",
    "Ende": "2026-04-14 07:00",
    "Pause": 0,
  },
  {
    "Beginn": "2026-04-14 15:45",
    "Ende": "2026-04-14 19:45",
    "Pause": 30,
  },
  {
    "Beginn": "2026-04-15 06:15",
    "Ende": "2026-04-15 07:00",
    "Pause": 45,
  },
  {
    "Beginn": "2026-04-15 15:45",
    "Ende": "2026-04-15 17:00",
    "Pause": 30,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-spaet-nacht stabil 1`] = `
[
  {
    "Beginn": "2026-04-14 06:00",
    "Ende": "2026-04-14 07:00",
    "Pause": 0,
  },
  {
    "Beginn": "2026-04-14 22:00",
    "Ende": "2026-04-14 19:45",
    "Pause": 30,
  },
  {
    "Beginn": "2026-04-15 06:15",
    "Ende": "2026-04-15 07:00",
    "Pause": 45,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-sonder stabil 1`] = `
[
  {
    "Beginn": "2026-04-14 06:00",
    "Ende": "2026-04-14 20:15",
    "Pause": 0,
  },
  {
    "Beginn": "2026-04-15 07:00",
    "Ende": "2026-04-15 17:00",
    "Pause": 20,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-spaet-sonder stabil 1`] = `
[
  {
    "Beginn": "2026-04-14 06:00",
    "Ende": "2026-04-14 20:15",
    "Pause": 0,
  },
  {
    "Beginn": "2026-04-15 07:00",
    "Ende": "2026-04-15 17:00",
    "Pause": 20,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-nacht-sonder stabil 1`] = `
[
  {
    "Beginn": "2026-04-14 06:00",
    "Ende": "2026-04-14 19:45",
    "Pause": 0,
  },
  {
    "Beginn": "2026-04-15 06:15",
    "Ende": "2026-04-14 20:15",
    "Pause": 45,
  },
  {
    "Beginn": "2026-04-15 07:00",
    "Ende": "2026-04-15 17:00",
    "Pause": 20,
  },
]
`;

exports[`Bereitschaftseingaben - Schichtzusammensetzungen ohne Override berechnet Kombination frueh-spaet-nacht-sonder stabil 1`] = `
[
  {
    "Beginn": "2026-04-14 06:00",
    "Ende": "2026-04-14 19:45",
    "Pause": 0,
  },
  {
    "Beginn": "2026-04-15 06:15",
    "Ende": "2026-04-14 20:15",
    "Pause": 45,
  },
  {
    "Beginn": "2026-04-15 07:00",
    "Ende": "2026-04-15 17:00",
    "Pause": 20,
  },
]
`;

exports[`Bereitschaftseingaben - verschiedene Overrides kombinierte Overrides fuer Frueh/ Spaet/ Nacht/ Sonder bleiben stabil 1`] = `
[
  {
    "Beginn": "2026-04-14 06:00",
    "Ende": "2026-04-14 19:45",
    "Pause": 0,
  },
  {
    "Beginn": "2026-04-15 05:20",
    "Ende": "2026-04-14 20:45",
    "Pause": 50,
  },
  {
    "Beginn": "2026-04-15 07:30",
    "Ende": "2026-04-15 17:00",
    "Pause": 15,
  },
]
`;
